src/test/ui/object-lifetime/object-lifetime-default-from-box-error.nll.stderr
error[E0621]: explicit lifetime required in the type of `ss`
  --> $DIR/object-lifetime-default-from-box-error.rs:18:5
   |
LL | fn load(ss: &mut SomeStruct) -> Box<SomeTrait> {
   |             --------------- help: add explicit lifetime `'static` to the type of `ss`: `&mut SomeStruct<'static>`
...
LL |     ss.r
   |     ^^^^ lifetime `'static` required

error[E0507]: cannot move out of borrowed content
  --> $DIR/object-lifetime-default-from-box-error.rs:18:5
   |
LL |     ss.r
   |     ^^^^ cannot move out of borrowed content

error[E0621]: explicit lifetime required in the type of `ss`
  --> $DIR/object-lifetime-default-from-box-error.rs:31:5
   |
LL | fn store1<'b>(ss: &mut SomeStruct, b: Box<SomeTrait+'b>) {
   |                   --------------- help: add explicit lifetime `'b` to the type of `ss`: `&mut SomeStruct<'b>`
...
LL |     ss.r = b;
   |     ^^^^ lifetime `'b` required

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0507, E0621.
For more information about an error, try `rustc --explain E0507`.
